WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
248138
Fix focus traversal for HTMLPluginElement
https://bugs.webkit.org/show_bug.cgi?id=248138
Summary
Fix focus traversal for HTMLPluginElement
Ahmad Saleem
Reported
2022-11-19 19:28:55 PST
HI Team, While going through Blink / Chrome bugs, I came across another which we can fix: Blink Commit -
https://chromium.googlesource.com/chromium/src/+/2d8d2b205c31e236b1ff896cc5530402ce858212
Webkit GitHub Commit -
https://github.com/WebKit/WebKit/blob/3e0a538bed6065041835b64748f76e2b5150a41f/Source/WebCore/html/HTMLPlugInElement.cpp#LL179
and remove Line 180 and also remove "!" from Line 179. It will fix following WPT Test:
https://wpt.fyi/results/html/interaction/focus/chrome-object-tab-focus-bug.html?label=experimental&label=master&aligned
Just wanted to raise another bug. Thanks!
Attachments
Add attachment
proposed patch, testcase, etc.
EWS
Comment 1
2022-11-21 00:26:56 PST
Committed
256900@main
(0989933dce57): <
https://commits.webkit.org/256900@main
> Reviewed commits have been landed. Closing PR #6679 and removing active labels.
Radar WebKit Bug Importer
Comment 2
2022-11-21 00:27:17 PST
<
rdar://problem/102575330
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug