Fix focus traversal for HTMLPluginElement

Fix focus traversal for HTMLPluginElement
https://bugs.webkit.org/show_bug.cgi?id=248138

Reviewed by Ryosuke Niwa.

This patch is to align Webkit behavior with Blink / Chrome and Gecko / Firefox.

Merge - https://chromium.googlesource.com/chromium/src/+/2d8d2b205c31e236b1ff896cc5530402ce858212

It is to remove early return when the widget / plugin is not present.

* Source/WebCore/html/HTMLPlugInElement.cpp:
(HTMLPlugInElement::defaultEventHandler): Fix early return
* LayoutTests/imported/w3c/web-platform-tests/html/interaction/focus/chrome-object-tab-focus-bug-expected.txt: Rebaselined
* LayoutTests/platform/mac/imported/w3c/web-platform-tests/html/interaction/focus/chrome-object-tab-focus-bug-expected.txt: Add platform specific expectation

Canonical link: https://commits.webkit.org/256900@main